Parsers now uses URL object instead of URI.